* Deprecated `vcn_cidr`, use `vcn_cidrs` instead (list of IPv4 CIDRs).
* Deprecated previous gateway creation variable names. We now use imperative style, see codingconventions (fixes #24 and #54)

=== New features
* added support for local peering gateways (fixes #38)
* added support for multiple CIDR (fixes #21)
* added custom display name for gateways and drg attachment (fixes #30 and #44)

=== Fixes
* Fixed description for var.local_peering_gateways (fixes #51)

=== Other minor changes
* Updated default tag values
* Updated all examples with new features and using Terraform Registry

== v2.3.0 (July 21, 2021)

=== New features
* added a new parameter to support reserved IP address for the NAT gateway (fixes #14)

== v2.2.0 (March, 23, 2021)

=== New features
* added a new parameter to create a DRG and attach it to VCN (fixes #16)
* added support for custom routing rules to provisioned route tables (fixes #17)
* added new outputs for each provisioned resources: "all_attributes" outputs have full provider coverage and are auto-updating. (fixes #34)
* added `service_gateway_id` output

=== Changes
* oci provider minimum version to 4.0.0
* module examples
** added Terraform minimum version to 0.13 and OCI provider minimum version to 4.0.0
** changed default label prefix to "terraform-oci"
** added outputs for cli feedback
** added a new example config for custom routing rules
* documentation update: coding conventions
* repo: default branch renamed from `master` to `main`

=== Fixes
* update legacy (attributes only) splat syntax in outputs

=== Deprecation notice

The folowwing variables will be renamed at the next major release of this module (related to issue #24):

* var.internet_gateway_enabled --> var.create_internet_gateway
* var.nat_gateway_enabled --> var.create_nat_gateway
* var.service_gateway_enabled --> var.create_service_gateway
* var.tags --> var.freeform_tags

== v2.1.0 (February, 03, 2021)

=== New features