@@ -20,7 +20,7 @@ nat_gateway_public_ip_id = "none"
 
 create_service_gateway = false
 
-vcn_cidr = "10.0.0.0/16"
+vcn_cidrs = ["10.0.0.0/16"]
 
 vcn_dns_label = "vcn"
 
